--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,117 @@
 
   <body class="bg-[#192332] overflow-x-clip m-0">
     <div class="grid place-items-center relative h-svh py-28 mb-0 sm:mb-12">
+      <nav class="absolute top-0 left-0 h-16 w-full z-40">
+        <div
+          class="layout w-full h-full absolute bg-black opacity-20 z-10"
+        ></div>
+        <div
+          class="container h-full relative z-20 flex justify-between items-center"
+        >
+          <div class="logo h-full p-3 flex gap-2">
+            <img
+              class="h-full"
+              src="./assets/images/logo/Lets__3_-removebg-preview.png"
+              alt="Logo"
+            />
+            <img
+              src="./assets/images/logo/logo text white.png"
+              alt=""
+              class="h-full"
+            />
+          </div>
+          <div class="controllers flex gap-6 items-center">
+            <div class="links">
+              <ul class="flex gap-2">
+                <li class="py-3 px-2">
+                  <a class="text-white text-sm" href="">Products</a>
+                </li>
+                <li class="py-3 px-2">
+                  <a class="text-white text-sm" href="">About</a>
+                </li>
+                <li class="py-3 px-2">
+                  <a class="text-white text-sm" href="">Reviews</a>
+                </li>
+                <li class="py-3 px-2">
+                  <a class="text-white text-sm" href="">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+            <div class="btns flex justify-center items-center gap-4">
+              <button
+                class="login btn text-white hover:text-black hover:bg-white transition duration-300 py-2 px-3 font-bold rounded-lg border-2"
+              >
+                Login
+              </button>
+              <button
+                class="signup btn bg-white text-black font-bold py-2 px-3 rounded-lg border-2"
+              >
+                Sign Up
+              </button>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <nav
+        class="fixed top-0 left-0 h-16 w-full z-50 bg-white -translate-y-full transition duration-500"
+      >
+        <!-- <div
+          class="layout w-full h-full absolute bg-black opacity-20 z-10"
+        ></div> -->
+        <div
+          class="container h-full relative z-20 flex justify-between items-center"
+        >
+          <div class="logo h-full p-3 flex gap-2">
+            <img
+              class="h-full"
+              src="./assets/images/logo/Lets__3_-removebg-preview.png"
+              alt="Logo"
+            />
+            <img
+              src="./assets/images/logo/logo text dark.png"
+              alt=""
+              class="h-full"
+            />
+          </div>
+          <div class="controllers flex gap-6 items-center">
+            <div class="links">
+              <ul class="flex gap-2">
+                <li class="py-3 px-2">
+                  <a class="text-black text-sm" href="">Products</a>
+                </li>
+                <li class="py-3 px-2">
+                  <a class="text-black text-sm" href="">About</a>
+                </li>
+                <li class="py-3 px-2">
+                  <a class="text-black text-sm" href="">Reviews</a>
+                </li>
+                <li class="py-3 px-2">
+                  <a class="text-black text-sm" href="">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+            <div class="btns flex justify-center items-center gap-4">
+              <button
+                class="login btn text-black hover:text-white hover:bg-black transition duration-300 py-2 px-3 font-bold rounded-lg border-2 border-black"
+              >
+                Login
+              </button>
+              <button
+                class="signup btn bg-black text-white font-bold py-2 px-3 rounded-lg border-2"
+              >
+                Sign Up
+              </button>
+            </div>
+          </div>
+        </div>
+      </nav>
       <img
         class="header-image headerImageAnimation col-span-full absolute inset-0 w-full h-full opacity-30 object-cover -z-10"
         src="./assets/./images/landing2.jpg"
       />
       <div class="flex container justify-center md:justify-stretch px-6">
         <div
-          class="landing-text animate-fadeOut flex flex-col justify-center gap-2 text-white w-4/5 md:w-3/5 lg:w-2/5 md:text-left text-center items-center md:items-stretch relative mb-24 z-50"
+          class="landing-text animate-fadeOut flex flex-col justify-center gap-2 text-white w-4/5 md:w-3/5 lg:w-2/5 md:text-left text-center items-center md:items-stretch relative mb-24 z-20"
         >
           <h1 class="font-black text-[3.5em]">Hello There</h1>
           <p class="landing-paragraph text-[0.9em] text-left">
