--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
     <title>Sala App</title>
     <!-- <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" /> -->
-    <link rel="stylesheet" href="assets/fonwawsome/all.css" />
+    <!-- <link rel="stylesheet" href="assets/fonwawsome/all.css" /> -->
 
-    <link rel="stylesheet" href="output.css" />
+    <!-- <link rel="stylesheet" href="output.css" /> -->
+    <link rel="stylesheet" href="assets/css/site.css" />
   </head>
 
   <body>
@@ -20,7 +21,9 @@
           Lets-Cookies
         </a>
         <div class="lg:hidden">
-          <button class="navbar-burger flex items-center text-blue-600 p-3">
+          <button
+            class="navbar-burger flex items-center text-blue-600 border-nonep-3"
+          >
             <svg
               class="block h-4 w-4 fill-current"
               viewBox="0 0 20 20"
@@ -150,7 +153,7 @@
             <span class="text-white" id="username"></span>
             <span class="text-white ml-2">|</span>
             <a
-              class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200"
+              class="hidden lg:inline-block py-2 px-6 hover:bg-slate-700 text-sm text-white font-bold rounded-xl transition duration-200"
               href="#"
               onclick="logout()"
             >
@@ -184,7 +187,10 @@
       <!-- products -->
       <section>
         <div class="container">
-          <div class="row my-5 gy-3" id="products"></div>
+          <div
+            class="lg:grid mx-8 grid-cols-4 grid-rows-3 justify-items-center my-10"
+            id="products"
+          ></div>
         </div>
       </section>
     </main>
