--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -1,102 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cart Page</title>
+    <link rel="stylesheet" href="../assets/css/site.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cart Page</title>
-  <link rel="stylesheet" href="../assets/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../assets/fonwawsome/all.css" />
-  <link rel="stylesheet" href="../assets/css/style.css" />
-</head>
+  <body>
+    <header>
+      <nav
+        class="relative px-4 py-4 flex justify-between items-center bg-black"
+      >
+        <a class="text-3xl font-bold leading-none text-white" href="/">
+          Lets-Cookies
+        </a>
+        <div class="lg:hidden">
+          <button
+            class="navbar-burger flex items-center text-blue-600 border-nonep-3"
+          >
+            <svg
+              class="block h-4 w-4 fill-current"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Mobile menu</title>
+              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+            </svg>
+          </button>
+        </div>
+        <ul
+          class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6"
+        >
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="/"
+              >Home</a
+            >
+          </li>
+          <li class="text-gray-300">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              stroke="currentColor"
+              class="w-4 h-4 current-fill"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+              />
+            </svg>
+          </li>
+          <li>
+            <a class="text-sm text-blue-600 font-bold" href="#">About Us</a>
+          </li>
+          <li class="text-gray-300">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              stroke="currentColor"
+              class="w-4 h-4 current-fill"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+              />
+            </svg>
+          </li>
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#"
+              >Services</a
+            >
+          </li>
+          <li class="text-gray-300">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              stroke="currentColor"
+              class="w-4 h-4 current-fill"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+              />
+            </svg>
+          </li>
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#"
+              >Pricing</a
+            >
+          </li>
+          <li class="text-gray-300">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              stroke="currentColor"
+              class="w-4 h-4 current-fill"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"
+              />
+            </svg>
+          </li>
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#"
+              >Contact</a
+            >
+          </li>
+        </ul>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-      <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="/index.html">Lets Cookies</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Policy</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Our Partners</a>
-            </li>
-          </ul>
+        <form class="flex justify-items-center items-center">
+          <a href="/pages/cart.html" class="position-relative me-3 relative">
+            <i class="fas fa-shopping-cart text-white"></i>
+            <span
+              class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 bg-red-500 text-white rounded-full px-2 py-1 text-xs"
+              id="cart-count"
+            ></span>
+          </a>
+          <div id="loginDiv" class="flex items-center">
+            <a
+              class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 px-6 bg-gray-50 hover:bg-gray-100 text-sm text-gray-900 font-bold rounded-xl transition duration-200"
+              href="/pages/login.html"
+              >Sign In</a
+            >
+            <span class="text-white">|</span>
 
+            <a
+              class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 px-6 bg-gray-50 hover:bg-gray-100 text-sm text-gray-900 font-bold rounded-xl transition duration-200"
+              href="#"
+              >Register</a
+            >
+          </div>
+          <div id="profileDiv">
+            <span class="text-white mr-2">|</span>
+            <span class="text-white" id="username"></span>
+            <span class="text-white ml-2">|</span>
+            <a
+              class="hidden lg:inline-block py-2 px-6 hover:bg-slate-700 text-sm text-white font-bold rounded-xl transition duration-200"
+              href="#"
+              onclick="logout()"
+            >
+              <i
+                class="cursor-pointer fa-solid fa-right-from-bracket text-white ml-2"
+              ></i
+            ></a>
+          </div>
+        </form>
+      </nav>
+    </header>
 
-          <form class="d-flex align-items-center">
-            <a href="/pages/cart.html" class="position-relative me-3">
-              <i class="fas fa-shopping-cart text-white"></i>
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                id="cart-count"></span>
-            </a>
-            <div id="loginDiv" class="d-flex align-items-center">
-              <a class="text-white me-2" href="/pages/login.html">Login</a>
-              <span class="text-white">|</span>
-              <a class="text-white ms-2" href="#">Register</a>
-            </div>
-            <div id="profileDiv" class="d-flex align-items-center ms-3">
-              <span class="text-white me-2">|</span>
-              <span class="text-white" id="username"></span>
-              <span class="text-white ms-2">|</span>
-              <i class="fa-regular fa-user text-white ms-2" onclick="logout()"></i>
-            </div>
-          </form>
+    <div class="pl-5 pr-5">
+      <h1
+        class="my-20 bg-white rounded-md shadow-md p-[30px] font-bold text-[30px]"
+      >
+        Shopping Cart
+      </h1>
+      <div class="row flex justify-between">
+        <div
+          class="w-2/3 my-20 bg-white rounded-md shadow-md p-[30px] font-bold text-[30px]"
+          id="cart"
+        >
+          <h2>Your Items</h2>
+          <table class="w-full">
+            <thead class="bg-gray-500">
+              <tr class="w-full">
+                <th>Product</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Total</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+
+            <tbody id="cart-items"></tbody>
+          </table>
+        </div>
+        <div
+          class="w-1/4 p-5 mt-20 ms-auto bg-gray-500 rounded-md shadow-md font-bold text-[30px] text-slate-950"
+        >
+          <h2>Summary</h2>
+          <p class="flex justify-between">
+            Total Items : <span id="total-items">0</span>
+          </p>
+          <p class="flex justify-between">Tax : <span>$ 0.00 </span></p>
+          <h3 class="flex justify-between">
+            Total : <span id="total-items-cost">0</span>
+          </h3>
+          <button
+            class="bg-slate-950 rounded-md text-white my-10 w-full p-2"
+            onclick="alert('Not Have gateway yet!')"
+          >
+            Checkout
+          </button>
         </div>
       </div>
-    </nav>
-  </header>
-
-  <div class="container">
-    <h1 class="my-4">Shopping Cart</h1>
-    <div class="row">
-      <div class="col-md-8" id="cart">
-        <h2>Your Items</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Product</th>
-              <th>Price</th>
-              <th>Quantity</th>
-              <th>Total</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-
-          <tbody id="cart-items"></tbody>
-        </table>
-      </div>
-      <div class="col-md-4 summary">
-        <h2>Summary</h2>
-        <p>Total Items : <span id="total-items">0</span></p>
-        <p>Tax : $ 0.00</p>
-        <h3>Total : <span id="total-items-cost">0</span></h3>
-        <button class="btn btn-primary" onclick="alert('Not Have gateway yet!')">Checkout</button>
-      </div>
     </div>
-  </div>
-  <script src="../assets/dist/js/bootstrap.popper.min.js"></script>
-  <script src="../assets/dist/js/bootstrap.min.js"></script>
-  <script src="../assets/js/auth.js"></script>
-  <script src="../assets/js/cart.js"></script>
-</body>
-
+    <script src="../assets/dist/js/bootstrap.popper.min.js"></script>
+    <script src="../assets/dist/js/bootstrap.min.js"></script>
+    <script src="../assets/js/auth.js"></script>
+    <script src="../assets/js/cart.js"></script>
+  </body>
 </html>
