--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sala App</title>
-
+  <!-- <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css" /> -->
+  <!-- <link rel="stylesheet" href="assets/fonwawsome/all.css" /> -->
   <link rel="stylesheet" href="assets/css/landingStyle.css" />
-  <link rel="stylesheet" href="assets/css/site.css" />
+  <link rel="stylesheet" href="./assets/css/output.css" />
 </head>
 
 <body class="bg-[#192332] overflow-x-clip m-0">
@@ -23,7 +24,7 @@
           <div class="links">
             <ul class="flex gap-2">
               <li class="py-3 px-2">
-                <a class="text-white text-sm" href="">Products</a>
+                <a class="text-white text-sm" href="products.html">Products</a>
               </li>
               <li class="py-3 px-2">
                 <a class="text-white text-sm" href="">About</a>
@@ -36,8 +37,8 @@
               </li>
             </ul>
           </div>
-          <div class="btns flex justify-center items-center gap-4">
-            <button
+          <div class="btns flex justify-center items-center gap-4" id="loginDiv">
+            <button onclick="window.location.href='../pages/login.html'"
               class="login btn text-white hover:text-black hover:bg-white transition duration-300 py-2 px-3 font-bold rounded-lg border-2">
               Login
             </button>
@@ -69,7 +70,7 @@
           <div class="links">
             <ul class="flex gap-2">
               <li class="py-3 px-2">
-                <a class="text-black text-sm" href="">Products</a>
+                <a class="text-black text-sm" href="products.html">Products</a>
               </li>
               <li class="py-3 px-2">
                 <a class="text-black text-sm" href="">About</a>
@@ -82,7 +83,14 @@
               </li>
             </ul>
           </div>
-          <div class="btns flex justify-center items-center gap-4">
+          <div>
+            <a href="/pages/cart.html" class="position-relative me-3">
+              <i class="fas fa-shopping-cart text-white"></i>
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                id="cart-count"></span>
+            </a>
+          </div>
+          <div class="btns flex justify-center items-center gap-4" id="loginDiv">
             <button
               class="login btn text-black hover:text-white hover:bg-black transition duration-300 py-2 px-3 font-bold rounded-lg border-2 border-black">
               Login
@@ -90,6 +98,12 @@
             <button class="signup btn bg-black text-white font-bold py-2 px-3 rounded-lg border-2">
               Sign Up
             </button>
+          </div>
+          <div id="profileDiv">
+            <span class="text-white me-2">|</span>
+            <span class="text-white" id="username"></span>
+            <span class="text-white ms-2">|</span>
+            <i class="logout fa-solid fa-right-from-bracket text-white ms-2" onclick="logout()"></i>
           </div>
         </div>
         <div
@@ -105,7 +119,7 @@
     <div class="mobile-links hidden top-0 left-0 h-full w-full z-30 bg-white pt-20">
       <ul class="flex flex-col gap-6 items-center justify-center">
         <li class="py-3 px-2">
-          <a class="text-black text-lg" href="">Products</a>
+          <a class="text-black text-lg" href="products.html">Products</a>
         </li>
         <li class="py-3 px-2">
           <a class="text-black text-lg" href="">About</a>
@@ -302,7 +316,9 @@
       </nav>
     </div>
   </footer>
+
   <script src="assets/js/landingPage.js"></script>
+  <script src="assets/js/auth.js"></script>
 </body>
 
 </html>
