--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sala App</title>
-  <!-- <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="assets/fonwawsome/all.css" /> -->
   <link rel="stylesheet" href="assets/css/landingStyle.css" />
   <link rel="stylesheet" href="./assets/css/output.css" />
+  <link rel="stylesheet" href="./assets/fontawesome/all.css" />
+
 </head>
 
 <body class="bg-[#192332] overflow-x-clip m-0">
@@ -37,7 +37,7 @@
               </li>
             </ul>
           </div>
-          <div class="btns flex justify-center items-center gap-4" id="loginDiv">
+          <div class="btns flex justify-center items-center gap-4" data-loginDiv>
             <button onclick="window.location.href='../pages/login.html'"
               class="login btn text-white hover:text-black hover:bg-white transition duration-300 py-2 px-3 font-bold rounded-lg border-2">
               Login
@@ -87,10 +87,10 @@
             <a href="/pages/cart.html" class="position-relative me-3">
               <i class="fas fa-shopping-cart text-white"></i>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                id="cart-count"></span>
+                data-cart="cart-count"></span>
             </a>
           </div>
-          <div class="btns flex justify-center items-center gap-4" id="loginDiv">
+          <div class="btns flex justify-center items-center gap-4" data-loginDiv>
             <button
               class="login btn text-black hover:text-white hover:bg-black transition duration-300 py-2 px-3 font-bold rounded-lg border-2 border-black">
               Login
@@ -103,7 +103,7 @@
             <span class="text-white me-2">|</span>
             <span class="text-white" id="username"></span>
             <span class="text-white ms-2">|</span>
-            <i class="logout fa-solid fa-right-from-bracket text-white ms-2" onclick="logout()"></i>
+            <i class="logout fa-solid fa-right-from-bracket text-white ms-2 cursor-pointer" onclick="logout()"></i>
           </div>
         </div>
         <div
