--- a/src/products.html
+++ b/src/products.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sala App</title>
   <link rel="stylesheet" href="assets/css/site.css" />
-
+  <link rel="stylesheet" href="./assets/fontawesome/all.css" />
 </head>
 
 <body>
   <header>
     <div class="grid place-items-center relative  py-14 mb-0 sm:mb-12">
-      <nav class="absolute top-0 left-0 h-16 w-full z-40">
+      <nav class="absolute top-0 left-0 h-16 w-full z-40 bg-black">
         <div class="layout w-full h-full absolute bg-black opacity-20 z-10"></div>
         <div class="container h-full relative z-20 flex justify-between items-center">
           <div class="logo h-full p-3 flex gap-2">
@@ -26,32 +26,41 @@
                   <a class="text-white text-sm" href="products.html">Products</a>
                 </li>
                 <li class="py-3 px-2">
-                  <a class="text-white text-sm" href="">About</a>
+                  <a class="text-white text-sm" href="about.html">About</a>
                 </li>
                 <li class="py-3 px-2">
-                  <a class="text-white text-sm" href="">Reviews</a>
+                  <a class="text-white text-sm" href="reviews.html">Reviews</a>
                 </li>
                 <li class="py-3 px-2">
-                  <a class="text-white text-sm" href="">Contact Us</a>
+                  <a class="text-white text-sm" href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
-            <div class="btns flex justify-center items-center gap-4" id="loginDiv">
-              <button
-                class="login btn text-white hover:text-black hover:bg-white transition duration-300 py-2 px-3 font-bold rounded-lg border-2"
-                onclick="window.location.href='../pages/login.html'">
-                Login
-              </button>
-              <button class="signup btn bg-white text-black font-bold py-2 px-3 rounded-lg border-2">
-                Sign Up
-              </button>
-            </div>
-            <div id="profileDiv">
-              <span class="text-white me-2">|</span>
-              <span class="text-white" id="username"></span>
-              <span class="text-white ms-2">|</span>
-              <i class="logout fa-solid fa-right-from-bracket text-white ms-2" onclick="logout()"></i>
-            </div>
+
+            <form class="flex items-center">
+              <a href="/pages/cart.html" class="relative mr-3">
+                <i class="fas fa-shopping-cart text-white"></i>
+                <span
+                  class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 badge rounded-full bg-red-500 h-6 w-6 text-center text-white"
+                  data-cart="cart-count">0</span>
+              </a>
+              <div class="btns flex justify-center items-center gap-4" data-loginDiv>
+                <button
+                  class="login btn text-white hover:text-black hover:bg-white transition duration-300 py-2 px-3 font-bold rounded-lg border-2"
+                  onclick="window.location.href='../pages/login.html'">
+                  Login
+                </button>
+                <button class="signup btn bg-white text-black font-bold py-2 px-3 rounded-lg border-2">
+                  Sign Up
+                </button>
+              </div>
+              <div id="profileDiv">
+                <span class="text-white me-2">|</span>
+                <span class="text-white" id="username"></span>
+                <span class="text-white ms-2">|</span>
+                <i class="logout fa-solid fa-right-from-bracket text-white ms-2 cursor-pointer" onclick="logout()"></i>
+              </div>
+            </form>
           </div>
           <div
             class="burger-icon flex md:hidden flex-col justify-evenly w-6 h-6 cursor-pointer m-4 group transition duration-300">
@@ -63,10 +72,7 @@
           </div>
         </div>
       </nav>
-      <nav class="fixed top-0 left-0 h-16 w-full z-50 bg-white -translate-y-full transition duration-500">
-        <!-- <div
-            class="layout w-full h-full absolute bg-black opacity-20 z-10"
-          ></div> -->
+      <nav class="fixed top-0 left-0 h-16 w-full z-50 bg-black -translate-y-full transition duration-500">
         <div class="container h-full relative z-20 flex justify-between items-center">
           <div class="logo h-full p-3 flex gap-2">
             <img class="h-full" src="./assets/images/logo/Lets__3_-removebg-preview.png" alt="Logo" />
@@ -76,28 +82,43 @@
             <div class="links">
               <ul class="flex gap-2">
                 <li class="py-3 px-2">
-                  <a class="text-black text-sm" href="products.html">Products</a>
+                  <a class="text-white text-sm" href="products.html">Products</a>
                 </li>
                 <li class="py-3 px-2">
-                  <a class="text-black text-sm" href="">About</a>
+                  <a class="text-white text-sm" href="about.html">About</a>
                 </li>
                 <li class="py-3 px-2">
-                  <a class="text-black text-sm" href="">Reviews</a>
+                  <a class="text-white text-sm" href="reviews.html">Reviews</a>
                 </li>
                 <li class="py-3 px-2">
-                  <a class="text-black text-sm" href="">Contact Us</a>
+                  <a class="text-white text-sm" href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
-            <div class="btns flex justify-center items-center gap-4">
-              <button
-                class="login btn text-black hover:text-white hover:bg-black transition duration-300 py-2 px-3 font-bold rounded-lg border-2 border-black">
-                Login
-              </button>
-              <button class="signup btn bg-black text-white font-bold py-2 px-3 rounded-lg border-2">
-                Sign Up
-              </button>
-            </div>
+            <form class="flex items-center">
+              <a href="/pages/cart.html" class="relative mr-3">
+                <i class="fas fa-shopping-cart text-white"></i>
+                <span
+                  class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 badge rounded-full bg-red-500 h-6 w-6 text-center text-white"
+                  data-cart="cart-count">0</span>
+              </a>
+              <div class="btns flex justify-center items-center gap-4" data-loginDiv>
+                <button
+                  class="login btn text-white hover:text-black hover:bg-white transition duration-300 py-2 px-3 font-bold rounded-lg border-2"
+                  onclick="window.location.href='../pages/login.html'">
+                  Login
+                </button>
+                <button class="signup btn bg-white text-black font-bold py-2 px-3 rounded-lg border-2">
+                  Sign Up
+                </button>
+              </div>
+              <div id="profileDiv">
+                <span class="text-white me-2">|</span>
+                <span class="text-white" id="username"></span>
+                <span class="text-white ms-2">|</span>
+                <i class="logout fa-solid fa-right-from-bracket text-white ms-2 cursor-pointer" onclick="logout()"></i>
+              </div>
+            </form>
           </div>
           <div
             class="burger-icon flex md:hidden flex-col justify-evenly w-6 h-6 cursor-pointer m-4 group transition duration-300">
@@ -112,16 +133,16 @@
       <div class="mobile-links hidden top-0 left-0 h-full w-full z-30 bg-white pt-20">
         <ul class="flex flex-col gap-6 items-center justify-center">
           <li class="py-3 px-2">
-            <a class="text-black text-lg" href="">Products</a>
+            <a class="text-black text-lg" href="products.html">Products</a>
           </li>
           <li class="py-3 px-2">
-            <a class="text-black text-lg" href="">About</a>
+            <a class="text-black text-lg" href="about.html">About</a>
           </li>
           <li class="py-3 px-2">
-            <a class="text-black text-lg" href="">Reviews</a>
+            <a class="text-black text-lg" href="reviews.html">Reviews</a>
           </li>
           <li class="py-3 px-2">
-            <a class="text-black text-lg" href="">Contact Us</a>
+            <a class="text-black text-lg" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -132,7 +153,6 @@
     <!-- categories -->
     <section>
       <div class="container mx-auto px-4  ">
-        <!-- animation: bounce 1s infinite; -->
         <div class="flex justify-between mt-10 scroller-inner" id="categories">
         </div>
       </div>
@@ -147,7 +167,7 @@
 
   <footer class="footer bg-dark text-white text-center py-3"></footer>
 
-
+  <script src="./assets/js/toaster.js"></script>
   <script src="./assets/js/landingPage.js"></script>
   <script src="assets/js/categories.js"></script>
   <script src="assets/js/auth.js"></script>
